# gvd

./: .gitignore  CMakeLists.txt  OctNode.h  OctreeUtils.cpp  OctreeUtils.h  README.txt  Resln.h  ambiguous.cpp  ambiguous.h  bb.h  connected_components.cpp  connected_components.h  convert-slides  copyright.txt  edge_cpp.h  geometry_cpp.cpp  geometry_cpp.h  gpu.cpp  gpu.h  graph.h  gvd.config  gvd.h  jrs-triangle.c  jrs-triangle.h  karras.cpp  karras.h  medial.h  mvertex_network.cpp  mvertex_network.h  octree.cpp  octree.h  octree_gpu.cpp  octree_gpu.h  opencl.cpp  opencl.h  options.cpp  options.h  orientation.cpp  orientation.h  search.h  (+17 more)
CMakeModules/: FindGLUT.cmake
bigint/: BigUnsigned.hh  BigUnsignedInABase.hh  NumberlikeArray.hh
data2/maze/: files.txt  rename
data_maze/: awktest  awktest2
opencl/: ambiguous.cl  bit.cpp  bit.h  cl_ambiguous.cpp  cl_ambiguous.h  cl_octree.cpp  cl_octree.h  defs.h  distance3.cpp  distance3.h  edge.h  geom.cpp  geom.h  geometry.cpp  geometry.h  octree.cl  opencl_cpps.cl  segment.h  triangle.h  tribox.cpp  tribox.h  uvertex_network.cpp  uvertex_network.h  vec.h  vec_cl.h  vec_cpp.h  vector2.cl  vertex.h
scripts/: explode-knives
viewer/: CMakeLists.txt  common.h  fit_main.cpp  gl2d.cpp  gl2d.h  gl3d.cpp  gl3d.h  gvdviewer2.cpp  gvdviewer2.h  gvdviewer3.cpp  gvdviewer3.h  io.cpp  io.h  material.cpp  material.h  medial2.cpp  medial2.h  medial3.cpp  medial3.h  mesh.cpp  mesh.h  movie  octviewer2.cpp  octviewer2.h  oviewer2.cpp  pngio.h  presentation.cpp  scene.h  segment2.cpp  segment2.h  texture.cpp  texture.h  viewer2.cpp  viewer3.cpp
viewer/decomposition/: Makefile  inverse_gauss_map.cpp  inverse_gauss_map.h  obj_octree.cpp  obj_octree.h  oct.cpp  octree_expansion.h  test.cpp  test2.cpp
viewer/regions/: .gitignore  Makefile  candidate.cpp  candidate.h  float2.h  region.cpp  region.h  region_merging.h  test.cpp
