cmake_minimum_required (VERSION 2.6)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

OPTION(OPENCL_ACCEL "Use OpenCL acceleration" OFF)
if(OPENCL_ACCEL)
  FIND_PACKAGE(OpenCL)
  if (OPENCL_FOUND)
    INCLUDE_DIRECTORIES(${OPENCL_INCLUDE_DIR})
    ADD_DEFINITIONS(-D__OPEN_CL_SUPPORT__)
  else (OPENCL_FOUND)
    set(OPENCL_LIBRARY "")
  endif (OPENCL_FOUND)
endif(OPENCL_ACCEL)

set(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}")

add_subdirectory (viewer)
